# ecoscope

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.rst  codecov.yml  environment-notebooks.yml  environment.yml  pyproject.toml  requirements-notebooks-test.txt  setup.py  test_asyncer.py
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/workflows/: _tests.yml  io_tests.yaml  link_issue.yml  lint.yml  main.yml  mypy.yml  nb_tests.yml  prefix_release.yml  publish-wizard.yml  publish.yml  smart_tests.yaml  test_all.yaml  test_all_daily.yaml  tests.yml  wizard-platform-tests.yml  wizard-tests.yml
changes/: 618.feature.md
dev/: gen_patrol_trajectory_fixture.py
doc/platform-sdk/: README.md  mkdocs.yml
doc/platform-sdk/content/: architecture.md  built-in-tasks.md  changelog.md  concepts.md  contributing.md  examples.md  getting-started.md  how-to-guides.md  index.md  troubleshooting.md  tutorials.md  understanding-spec.md
doc/source/: conf.py  ecoscope_gui.md  ecoscope_gui.rst  index.rst  notebooks.rst
ecoscope/: __init__.py  relocations.py  trajectory.py
ecoscope/analysis/: __init__.py  astronomy.py  classifier.py  ecograph.py  feature_density.py  geofence.py  geospatial.py  immobility.py  linear_time_density.py  percentile.py  proximity.py  recurse.py  seasons.py  smoothing.py  speed.py  trend_analysis.py
ecoscope/base/: __init__.py  _dataclasses.py  base.py  ecodataframe.py  new_base.py  relocations.py  straightrack.py  trajectory.py  utils.py
ecoscope/contrib/: __init__.py  basemaps.py  dasclient.py  foliumap.py  geemap.py  legend.txt
ecoscope/distributed/: decorators.py  serialization.py  time_density.py  types.py
ecoscope/io/: __init__.py  async_earthranger.py  earthranger.py  earthranger_utils.py  eeio.py  eetools.py  raster.py  smart.py  smartio.py  utils.py  vector.py
ecoscope/mapping/: __init__.py  lonboard_map.py  map.py
ecoscope/mapping/EcoMap/: .gitignore  MANIFEST.in  package.json  pyproject.toml
ecoscope/mapping/EcoMap/ecomap/: __init__.py  deck.py  geoJsonLayer.py  layer.py  mapControl.py  tileLayer.py  titleControl.py
ecoscope/mapping/EcoMap/src/: geojson-layer-model.ts  index.tsx  model.ts  style.css  tile-layer-model.ts  title-widget.ts  widget-model.ts
ecoscope/platform/: __init__.py  annotations.py  connections.py  indexes.py  jsonschema.py  mock_loaders.py  schemas.py  serde.py
ecoscope/platform/wizard/events-dashboard-wizard-provider/: README.md  pyproject.toml
ecoscope/platform/wizard/events-dashboard-wizard-provider/src/ecoscope_events_dashboard_wizard_provider/: __init__.py  provider.py
ecoscope/platform/wizard/events-dashboard-wizard-provider/src/ecoscope_events_dashboard_wizard_provider/templates/: layout.json.jinja2  spec.yaml.jinja2
ecoscope/platform/wizard/events-dashboard-wizard-provider/tests/: test_provider.py
ecoscope/plotting/: __init__.py  plot.py
html/: NAV_HANDOFF.md  index.html  site.js  styles.css
html/fonts/: OFL.txt
nb-tests/: test_notebooks.py
notebooks/01. IO/: EarthRanger_IO.ipynb  GEE_IO.ipynb  Landscape Dynamics Data.ipynb
notebooks/02. Relocations & Trajectories/: Relocations_and_Trajectories.ipynb
notebooks/03. Home Range & Movescape/: EcoGraph.ipynb  Elliptical Time Density (ETD).ipynb  Recurse.ipynb  Reduce Regions.ipynb
notebooks/04. EcoMap & EcoPlot/: EcoMap.ipynb  EcoPlot.ipynb
notebooks/05. Environmental Analyses/: Landscape Grid.ipynb  Remote Sensing Time Series Anomaly.ipynb  Seasonal Calculation.ipynb
notebooks/06. Data Management/: Collar Voltage.ipynb  Tracking Data Gantt Chart.ipynb
platform/: annotations.py  connections.py  indexes.py  jsonschema.py  schemas.py
publish/: build.sh  push.sh  verify.sh
tests/: conftest.py  test_astronomy.py  test_asyncearthranger_io.py  test_base.py  test_classifier.py  test_earthranger_io.py  test_earthranger_utils.py  test_ecodataframe.py  test_ecograph.py  test_ecomap.py  test_ecomap2.py  test_ecoplot.py  test_eetools.py  test_feature_density.py  test_geofence.py  test_html.py  test_immobility.py  test_io_utils.py  test_linear_time_density.py  test_newbase.py  test_ng.py  test_notebooks.py  test_plotting.py  test_png.py  test_proiximity.py  test_proximity.py  test_recurse.py  test_seasons.py  test_smart_io.py  test_smoothing.py  test_speed.py  test_trend_analysis.py  test_ud.py  test_utils.py  test_vector_io.py
tests/distributed/: test_custom_types.py  test_decorators.py  test_distributed.py  test_tasks.py  test_type_adapter.py  test_types.py
tests/platform/: test_annotations.py  test_connections.py  test_indexes.py  test_serde.py
tests/reference_data/: salif_btwn_max.feather  salif_ci_min.feather  salif_degree_mean.feather  salif_degree_mean_std.feather  salif_dotprod.feather  salif_sl_median.feather  salif_speed.feather
tests/test_output/: downsampled_relocs.feather  downsampled_relocs_noint.feather  etd_percentile_area.feather  etd_percentile_area_subset.feather  features.csv  geofence_crossing_point.feather  line_density.tif  ltd.parquet  movbank_isnight.feather  new.html  point_density.tif  salif_btwn_max.feather  salif_ci_min.feather  salif_degree_mean.feather  salif_degree_mean_std.feather  salif_dotprod.feather  salif_revisits.feather  salif_sl_median.feather  salif_speed.feather  traj_sdf.feather  traj_sdf_bins.feather  upsampled_noncontiguous.feather  upsampled_noncontiguous_1.feather  upsampled_noncontiguous_2.feather  upsampled_relocs.feather  upsampled_withtolerance.feather
wizard/ecocope-wizard-providers/: pyproject.toml
wizard/ecoscope-wizard-providers/: pyproject.toml
wizard/ecoscope-wizard-providers/events-map-example/: README.md
wizard/ecoscope-wizard-providers/events-map-example/src/ecoscope_events_map_example/: __init__.py  provider.py
wizard/ecoscope-wizard-providers/events-map-example/src/ecoscope_events_map_example/templates/: layout.json.jinja2  spec.yaml.jinja2
wizard/ecoscope-wizard-providers/events-map-example/tests/: test_provider.py
wizard/events-map-example/: pyproject.toml
(+319 files in other folders)
