[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "ecoscope"
dynamic = ["version"]
description = "Standard Analytical Reporting Framework for Conservation"
readme = "README.rst"
authors = [{ name = "Jake Wall", email = "walljcg@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.4",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "backoff>=2",
  "earthengine-api>=1.4,<1.7.13",
  "earthranger-client @ git+https://github.com/PADAS/er-client@v1.3.3",
  "geopandas>=1",
  "numpy>=2,<2.1",
  "pandas<3",
  "pyproj>=3.3",
  "rasterio>=1.3",
  "tqdm>=4",
]

[project.urls]
Homepage = "https://ecoscope.io"
Repository = "https://github.com/wildlife-dynamics/ecoscope"
Tracker = "https://github.com/wildlife-dynamics/ecoscope/issues"

[project.optional-dependencies]
analysis = [
  "astroplan",
  "datashader",
  "igraph",
  "mapclassify",
  "matplotlib",
  "networkx",
  "numba",
  "scipy",
  "scikit-image",
  "scikit-learn",
  "statsmodels",
]
mapping = [
  "duckdb",
  "lonboard @ git+https://github.com/wildlife-dynamics/lonboard@v0.0.8",
  "matplotlib",
  "mapclassify",
  "pyarrow",
]
plotting = ["plotly", "scikit-learn"]
platform = [
    "pandera>=0.24.0,<0.29",
    "pydantic<2.9.0",
    "pydantic-settings",
    "cloudpathlib[gs]",
    "wt-registry>=0.2.0,<0.3.0",
    "wt-task>=0.1.0,<0.2.0",
]
docs = [
  "myst-parser",
  "nbsphinx",
  "pydata-sphinx-theme",
  "sphinx",
  "sphinx-autoapi",
]

[dependency-groups]
test = ["pytest", "pytest-cov", "pytest-mock", "pytest-reportlog", "fsspec"]
mypy = [
  "mypy",
  "pandas-stubs",
  "pandera[mypy]",
  "types-httplib2",
  "types-python-dateutil",
  "types-pytz",
  "types-requests",
  "types-shapely",
  "types-tqdm",
]

[tool.mypy]
plugins = ["pandera.mypy", "pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = [
  "ignore:distutils Version classes are deprecated. Use packaging.version instead.:DeprecationWarning",
  'ignore:Feature.geometry\(\) is deprecated. Use Element.geometry\(\):DeprecationWarning',
]
markers = ["io", "smart_io"]

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | _build
  | buck-out
  | build
  | dist
  | notebooks
  | env

)/
'''

[tool.coverage.run]
source = ['ecoscope']
omit = ['ecoscope/contrib/*']

[tool.setuptools]
packages = [
  "ecoscope",
  "ecoscope.analysis",
  "ecoscope.analysis.UD",
  "ecoscope.base",
  "ecoscope.contrib",
  "ecoscope.io",
  "ecoscope.mapping",
  "ecoscope.plotting",
  "ecoscope.platform",
  "ecoscope.platform.tasks",
  "ecoscope.platform.tasks.analysis",
  "ecoscope.platform.tasks.config",
  "ecoscope.platform.tasks.filter",
  "ecoscope.platform.tasks.groupby",
  "ecoscope.platform.tasks.io",
  "ecoscope.platform.tasks.preprocessing",
  "ecoscope.platform.tasks.results",
  "ecoscope.platform.tasks.skip",
  "ecoscope.platform.tasks.test",
  "ecoscope.platform.tasks.transformation",
  "ecoscope.platform.tasks.warning",
]

[tool.setuptools.package-data]
"ecoscope.platform.tasks.results" = ["*.jinja2"]
"ecoscope.platform.tasks.io" = ["*.parquet", "*.json"]
"ecoscope.platform.tasks.preprocessing" = ["*.parquet"]

[project.entry-points."wt_registry"]
ecoscope = "ecoscope.platform.tasks"
[project.entry-points."wt_task.mock_loaders"]
parquet = "ecoscope.platform.mock_loaders:load_parquet"

[tool.setuptools_scm]
write_to = "ecoscope/_version.py"
write_to_template = "__version__ = '{version}'"
